--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,7 @@ body {
 
 .info-container.expanded .info-content {
   display: block;
+  margin: 10px;
 }
 
 .info-container.expanded .question-mark {
@@ -94,7 +95,7 @@ body {
 
 .info-container.expanded .info-circle {
   width: 250px;
-  height: 100px;
+  height: 160px;
   padding: 5px;
   border-radius: 10px;
   background-color: white;
